# CARTO-swagger-2.0.yml
@@ -2870,6 +2870,44 @@ paths:
       - CartoComponent
       consumes:
       - application/json
+  /rest/CartoApplication/{row_id}/action:SAVE_CHART:
+    get:
+      summary: Call a custom action for a CartoApplication business object record
+        or for all records
+      security:
+      - bearerAuth: []
+      produces:
+      - application/json
+      operationId: obj-cartoapplication-action-save_chart
+      responses:
+        '200':
+          schema:
+            $ref: '#/definitions/ActionResult'
+          description: Success in calling the custom action
+        '400':
+          schema:
+            $ref: '#/definitions/Error400'
+          description: Bad request
+        '401':
+          schema:
+            $ref: '#/definitions/Error401'
+          description: Unauthorized
+        '500':
+          schema:
+            $ref: '#/definitions/Error500'
+          description: Internal server error
+        '404':
+          schema:
+            $ref: '#/definitions/Error404'
+          description: Not found
+      parameters:
+      - in: path
+        name: row_id
+        description: Row ID (or empty or _ for all row IDs)
+        type: string
+        required: true
+      tags:
+      - CartoApplication
   /rest/CartoBusinessConcept:
     get:
       summary: Search CartoBusinessConcept business object records or get contextualized
@@ -4021,6 +4059,11 @@ paths:
         description: Search filter for Hosting Provider
         type: string
         required: false
+      - in: query
+        name: cartoAppChartBase
+        description: Search filter for cartoAppChartBase
+        type: string
+        required: false
       tags:
       - CartoApplication
   /rest/CartoCmpTech:
@@ -4774,6 +4817,40 @@ paths:
         - UAT
       tags:
       - CartoServer
+  /rest/CartoApplication/{row_id}/publication:Report:
+    get:
+      summary: Call a custom publication for a CartoApplication business object record
+        or for all records
+      security:
+      - bearerAuth: []
+      produces:
+      - application/json
+      operationId: obj-cartoapplication-publication-report
+      responses:
+        '200':
+          schema:
+            $ref: '#/definitions/PublicationResult'
+          description: Success in calling the custom publication
+        '401':
+          schema:
+            $ref: '#/definitions/Error401'
+          description: Unauthorized
+        '500':
+          schema:
+            $ref: '#/definitions/Error500'
+          description: Internal server error
+        '404':
+          schema:
+            $ref: '#/definitions/Error404'
+          description: Not found
+      parameters:
+      - in: path
+        name: row_id
+        description: Row ID (or empty or _ for all row IDs)
+        type: string
+        required: true
+      tags:
+      - CartoApplication
 securityDefinitions:
   basicAuth:
     type: basic
@@ -5035,6 +5112,9 @@ definitions:
         - '2'
         - '3'
         - '4'
+      cartoAppChartBase:
+        description: cartoAppChartBase
+        type: string
       cartoAppBusId__cartoBusBuscatId:
         description: Business Business Category
         type: string
